fix: chart spacing; minor styling changes

--- a/apps/aggregation-dashboard/src/styles/index.scss
+++ b/apps/aggregation-dashboard/src/styles/index.scss
@@ -1,3 +1,11 @@
+main.container-fluid {
+  padding: 0;
+
+  &.p-3 {
+    padding: 0;
+  }
+}
+
 .app-page,
 .page-footer {
   font-family: Helvetica, sans-serif;
